fix styling of hero carousel and dealer inquiry styling on mobile

--- a/src/assets/scss/_carousel.scss
+++ b/src/assets/scss/_carousel.scss
@@ -1,7 +1,7 @@
 .dotNav {
   display: flex;
   justify-content: center;
-  padding: 20px 0 40px;
+  padding: 0 0 20px;
   .dot {
     width: 30px;
     height: 30px;
@@ -78,11 +78,6 @@
       }
     }
   }
-  .dotNav {
-    display: flex;
-    justify-content: center;
-    padding: 40px 0;
-  }
 }
 
 @media(min-width: 768px) {
@@ -100,8 +95,8 @@
     }
   }
   .carousel {
-    height: 100vh;
     overflow-y: hidden;
+    min-height: 600px;
     .carouselWrap {
       height: 100%;
       .slide {
@@ -114,13 +109,16 @@
           img {
             width: 100%;
             height: auto;
+            box-sizing: border-box;
           }
         }
-        &:nth-child(1),
-        &:nth-child(3) {
+        &:nth-child(1) {
           .slideImage {
             display: flex;
             align-items: center;
+            img {
+              width: 90%;
+            }
           }
         }
         &:nth-child(2) {
@@ -132,16 +130,23 @@
             }
           }
         }
+        &:nth-child(3) {
+          .slideImage {
+            display: flex;
+            align-items: center;
+          }
+        }
         .slideCopy {
           flex: 0 0 50%;
+          align-self: flex-end;
+          position: relative;
+          bottom: 15%;
           opacity: 1;
-          transform: translate(0, 100px);
           transition: all 0.5s ease-in-out;
           h2 {
             text-align: left;
           }
           &.fade {
-            transform: translate(0, 110px);
             opacity: 0;
             transition: all 0.3s ease-in-out;
           }
@@ -163,17 +168,29 @@
     .carouselWrap {
       .slide {
         .slideImage {
+          img {
+            padding: 0 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .carousel {
+    .carouselWrap {
+      .slide {
+        .slideImage {
           flex: 0 0 50%;
           img {
             padding: 0 100px;
-            box-sizing: border-box;
           }
         }
-        &:nth-child(1),
         &:nth-child(3) {
           .slideImage {
             img {
-              width: 90%;
+              padding: 0 40px;
             }
           }
         }
