--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -214,14 +214,14 @@ input {
 .dealerInquiry {
   background: linear-gradient(#885438, #461D0D);
   color: white;
-  height: 50vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   box-sizing: border-box;
-  padding: 0 20px;
+  padding: 20px;
   h3 {
     margin: 0;
   }
@@ -736,7 +736,6 @@ input {
 
 @media(min-width: 768px) {
   .hero {
-    min-height: 100vh;
     display: flex;
     .heroTitle {
       display: flex;
